--- a/schichtplanGeneratorFrontend/src/app/components/main/participants-add/participants-add.component.html
+++ b/schichtplanGeneratorFrontend/src/app/components/main/participants-add/participants-add.component.html
@@ -2,13 +2,13 @@
   <!-- Participant Token -->
   <ion-item>
     <ion-label>Participant Token</ion-label>
-    <ion-input formControlName="participantToken" type="text" required></ion-input>
+    <ion-input formControlName="participantToken" type="text"></ion-input>
   </ion-item>
 
   <!-- Name -->
   <ion-item>
     <ion-label>Name</ion-label>
-    <ion-input formControlName="name" type="text" required></ion-input>
+    <ion-input formControlName="displayName" type="text"></ion-input>
   </ion-item>
 
   <!-- Color -->
