--- a/schichtplanGeneratorFrontend/src/app/components/landing/register/register.component.html
+++ b/schichtplanGeneratorFrontend/src/app/components/landing/register/register.component.html
@@ -4,7 +4,7 @@
         offset-xl="4">
         <ion-item>
           <ion-label position="floating">Name</ion-label>
-          <ion-input [(ngModel)]="registrationData.name" type="text" required></ion-input>
+          <ion-input [(ngModel)]="registrationData.userName" type="text" required></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Email</ion-label>
@@ -16,7 +16,7 @@
         </ion-item>
         <ion-item>
           <ion-label position="floating">Repeat Password</ion-label>
-          <ion-input [(ngModel)]="registrationData.repeatpassword" type="password" required></ion-input>
+          <ion-input [(ngModel)]="registrationData.repeatPassword" type="password" required></ion-input>
         </ion-item>
         <ion-button expand="block" (click)="onSubmit()">Register</ion-button>
       </ion-col>
