--- a/schichtplanGeneratorFrontend/src/app/components/main/participants-add/participants-add.component.html
+++ b/schichtplanGeneratorFrontend/src/app/components/main/participants-add/participants-add.component.html
@@ -1,83 +1,81 @@
 <form [formGroup]="participantForm" (ngSubmit)="onSubmit()">
   <!-- Participant Token -->
   <ion-item>
-    <ion-label>Participant Token</ion-label>
-    <ion-input formControlName="participantToken" type="text"></ion-input>
+    <ion-label position="stacked">Participant Token</ion-label>
+    <ion-input formControlName="participantToken" type="text" required></ion-input>
   </ion-item>
 
-  <!-- Name -->
+  <!-- Display Name -->
   <ion-item>
-    <ion-label>Name</ion-label>
-    <ion-input formControlName="displayName" type="text"></ion-input>
+    <ion-label position="stacked">Display Name</ion-label>
+    <ion-input formControlName="displayName" type="text" required></ion-input>
   </ion-item>
 
   <!-- Color -->
   <ion-item>
-    <ion-label>Color</ion-label>
-    <ion-input formControlName="color" type="color"></ion-input>
+    <ion-label position="stacked">Color</ion-label>
+    <ion-input formControlName="color" type="color" required></ion-input>
   </ion-item>
 
   <!-- Off Days -->
   <ion-item>
-    <ion-label>Off Days</ion-label>
+    <ion-label position="stacked">Off Days</ion-label>
     <ion-datetime-button datetime="offDays"></ion-datetime-button>
     <ion-modal [keepContentsMounted]="true">
       <ng-template>
-        <ion-datetime id="offDays" formControlName="offDays" presentation="date"></ion-datetime>
+        <ion-datetime id="offDays" presentation="date" [multiple]="true" formControlName="offDays"></ion-datetime>
       </ng-template>
     </ion-modal>
   </ion-item>
 
   <!-- Friends -->
   <ion-item>
-    <ion-label>Friends</ion-label>
-    <ion-select formControlName="friends" multiple="true">
-      <!-- <ion-select-option *ngFor="let friend of availableParticipants" [value]="friend">
-        {{ friend.name }}
-      </ion-select-option> -->
-    </ion-select>
+    <ion-label position="stacked">Friends</ion-label>
+    <ion-input formControlName="friends" type="text"></ion-input>
   </ion-item>
 
   <!-- Enemies -->
   <ion-item>
-    <ion-label>Enemies</ion-label>
-    <ion-select formControlName="enemies" multiple="true">
-      <!-- <ion-select-option *ngFor="let enemy of availableParticipants" [value]="enemy">
-        {{ enemy.name }}
-      </ion-select-option> -->
-    </ion-select>
+    <ion-label position="stacked">Enemies</ion-label>
+    <ion-input formControlName="enemies" type="text"></ion-input>
   </ion-item>
 
   <!-- Shift Preferences -->
-  <!-- ... -->
+  <ion-item>
+    <ion-label position="stacked">Shift Preferences</ion-label>
+    <ion-input formControlName="shiftPreferences" type="number"></ion-input>
+  </ion-item>
 
   <!-- Experience -->
   <ion-item>
-    <ion-label>Experience</ion-label>
+    <ion-label position="stacked">Experience</ion-label>
     <ion-input formControlName="experience" type="number"></ion-input>
   </ion-item>
 
   <!-- Arrival Time -->
   <ion-item>
-    <ion-label>Arrival Time</ion-label>
+    <ion-label position="stacked">Arrival Time</ion-label>
     <ion-datetime-button datetime="arrivalTime"></ion-datetime-button>
     <ion-modal [keepContentsMounted]="true">
       <ng-template>
-        <ion-datetime id="arrivalTime" formControlName="arrivalTime"></ion-datetime>
+        <ion-datetime id="arrivalTime" formControlName="arrivalTime" displayFormat="h A"
+          pickerFormat="h A"></ion-datetime>
       </ng-template>
     </ion-modal>
   </ion-item>
 
   <!-- Departure Time -->
   <ion-item>
-    <ion-label>Departure Time</ion-label>
+    <ion-label position="stacked">Departure Time</ion-label>
     <ion-datetime-button datetime="departureTime"></ion-datetime-button>
     <ion-modal [keepContentsMounted]="true">
       <ng-template>
-        <ion-datetime id="departureTime" formControlName="departureTime"></ion-datetime>
+        <ion-datetime id="departureTime" formControlName="departureTime" displayFormat="h A"
+          pickerFormat="h A"></ion-datetime>
       </ng-template>
     </ion-modal>
   </ion-item>
+
   <!-- Absences -->
   <div formArrayName="absences">
     <ion-item *ngFor="let absence of absences.controls; let i = index" [formGroupName]="i">
@@ -85,7 +83,7 @@
       <ion-datetime-button datetime="absenceStart"></ion-datetime-button>
       <ion-modal [keepContentsMounted]="true">
         <ng-template>
-          <ion-datetime id="absenceStart" formControlName="startDate"></ion-datetime>
+          <ion-datetime id="absenceStart" formControlName="absence"></ion-datetime>
         </ng-template>
       </ion-modal>
       <ion-datetime-button datetime="absenceEnd"></ion-datetime-button>
@@ -96,15 +94,17 @@
       </ion-modal>
     </ion-item>
   </div>
-  <ion-button (click)="addAbsence()">Add Absence</ion-button>
 
   <!-- Role -->
   <ion-item>
-    <ion-label>Is Supervisor</ion-label>
-    <ion-toggle formControlName="isSupervisor"></ion-toggle>
+    <ion-label position="stacked">Role</ion-label>
+    <ion-select formControlName="role">
+      <ion-select-option value="1">Role 1</ion-select-option>
+      <ion-select-option value="2">Role 2</ion-select-option>
+      <!-- Add more roles -->
+    </ion-select>
   </ion-item>
 
   <!-- Submit button -->
-  <ion-button type="submit" [disabled]="participantForm.invalid">Submit</ion-button>
-
+  <ion-button type="submit" [disabled]="participantForm.invalid">Add Participant</ion-button>
 </form>
