--- a/schichtplanGeneratorFrontend/src/app/components/main/shifts-overview/shifts-overview.component.html
+++ b/schichtplanGeneratorFrontend/src/app/components/main/shifts-overview/shifts-overview.component.html
@@ -1,3 +1,32 @@
-<p>
-  shifts-overview works!
-</p>
+<ion-grid>
+  <ion-col size="2">
+    <ion-row class="header-row">
+      Shift Name
+    </ion-row>
+    <ion-row class="header-row">
+      End Date
+    </ion-row>
+    <ion-row class="header-row">
+      End Date
+    </ion-row>
+  </ion-col>
+  <ion-col size="2">
+    <ion-row *ngFor="let shift of shifts" (click)="onShiftSelected(shift)">
+      {{ shift.shiftName }}
+      {{ shift.startDate | date:'shortDate' }}
+      {{ shift.endDate | date:'shortDate' }}
+
+      {{ shift.category }}
+      {{ shift.type }}
+      {{ shift.experienceLevel }}
+      <ion-buttons>
+        <ion-button size="small" fill="clear" (click)="onEditShift(shift); $event.stopPropagation();">
+          <ion-icon name="create-outline"></ion-icon>
+        </ion-button>
+        <ion-button size="small" fill="clear" (click)="onDeleteShift(shift); $event.stopPropagation();">
+          <ion-icon name="close-outline"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    </ion-row>
+  </ion-col>
+</ion-grid>
