--- a/schichtplanGeneratorFrontend/src/app/pages/shifts/shifts.page.html
+++ b/schichtplanGeneratorFrontend/src/app/pages/shifts/shifts.page.html
@@ -1,13 +1,37 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>shifts</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/third-page"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Shifts</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">shifts</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+
+  <app-shifts-overview [shifts]="shifts$ | async" (shiftSelected)="onShiftSelected($event)"
+    (shiftDelete)="onShiftDelete($event)" (shiftEdit)="onShiftEdit($event)"></app-shifts-overview>
+
+  <ion-button (click)="onShiftAdd()">Add Shift</ion-button>
+
 </ion-content>
+
+<ion-modal class="modal-fullscreen" [isOpen]="isOpenShiftModal" (didDismiss)="openShiftAddModal(false)">
+  <ng-template>
+    <ion-header class="modal-header ion-no-border">
+      <ion-toolbar>
+        <ion-title slot="start">
+        </ion-title>
+        <ion-buttons slot="end">
+          <ion-button (click)="openShiftAddModal(false)">
+            <ion-icon slot="icon-only" name="close"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="modal-content light-tint-background">
+      <app-shift-add [shift]="shift" [isEdit]="editMode" (shiftAdded)="onShiftAdded($event)"
+        (shiftEdited)="onShiftEdited($event)"></app-shift-add>
+    </ion-content>
+  </ng-template>
+</ion-modal>
